--- a/Challenge7/challenge7/src/Components/Header/Header.sass
+++ b/Challenge7/challenge7/src/Components/Header/Header.sass
@@ -6,5 +6,6 @@
   padding: 20px
   background: var(--header-bg)
   color: var(--font)
+  z-index: 2000
   @media(max-width: 600px)
     border-radius: 0
