--- a/Challenge7/challenge7/src/App.sass
+++ b/Challenge7/challenge7/src/App.sass
@@ -1,41 +1,37 @@
-.appWrapper
+.App
   width: 100%
+  max-width: 600px
   min-height: 100vh
-  background: var(--app-bg)
-  .App
-    width: 100%
-    max-width: 600px
-    min-height: 100vh
-    margin: auto
-    h1
-      letter-spacing: 2px
-    .tools
-      padding: 15px 20px
+  margin: auto
+  h1
+    letter-spacing: 2px
+  .tools
+    padding: 15px 20px
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: center
+    border-radius: 0 0 20px 20px
+    background: var(--header-bg)
+    ul
       display: flex
       flex-direction: row
-      align-items: center
-      justify-content: center
-      border-radius: 0 0 20px 20px
-      background: var(--header-bg)
-      ul
-        display: flex
-        flex-direction: row
-        list-style-type: none
-        background: var(--header-accent)
-        color: var(--font)
+      list-style-type: none
+      background: var(--header-accent)
+      color: var(--font)
+      height: 40px
+      border-radius: 20px
+      li
+        width: 100%
         height: 40px
-        border-radius: 20px
-        li
+        display: flex
+        justify-content: center
+        align-items: center
+        padding: 0 5px
+        &:not(li:first-child)
           width: 100%
-          height: 40px
-          display: flex
-          justify-content: center
-          align-items: center
-          padding: 0 5px
-          &:not(li:first-child)
-            width: 100%
-            border-left: 2px solid var(--header-bg)
-            padding: 0 10px
+          border-left: 2px solid var(--header-bg)
+          padding: 0 10px
 
 .blur
   width: 100vw
@@ -47,7 +43,6 @@
   position: fixed
   left: 0
   top: 0
-  backdrop-filter: blur(4px)
   z-index: 2000
   .LoginButton
     margin: 200px 0 0 0
@@ -56,7 +51,11 @@
     color: var(--font)
     font-size: 1.2em
     border-radius: 10px
-
+    transition: 0.5s
+    &:hover
+      transform: scale(1.1)
+  h1
+    color: var(--font2)
 @media(max-width: 600px)
   .tools
     display: flex
