background loader fix

--- a/Challenge7/challenge7/src/Components/AppWrapper/AppWrapper.sass
+++ b/Challenge7/challenge7/src/Components/AppWrapper/AppWrapper.sass
@@ -3,7 +3,9 @@
   min-height: 100vh
   background: var(--app-bg)
 
-//@media (max-width: 600px)
-//  .AppWrapper + .background
-//    &>span
-//      display: none
+
+.AppWrapper + .background
+  z-index: -1
+  //@media (max-width: 600px)
+  //  &>span
+  //    display: none
