--- a/Challenge7/challenge7/src/Utils/AuthLoader/AuthLoader.sass
+++ b/Challenge7/challenge7/src/Utils/AuthLoader/AuthLoader.sass
@@ -4,7 +4,7 @@
   position: fixed
   left: 0
   top: 0
-  background: var(--app-bg)
+  background: transparent
   display: flex
   justify-content: center
   align-items: center
