--- a/Challenge7/challenge7/src/App.sass
+++ b/Challenge7/challenge7/src/App.sass
@@ -12,7 +12,7 @@
     align-items: center
     justify-content: center
     border-radius: 0 0 20px 20px
-    background: var(--header-bg)
+    background: rgba(var(--header-bg),0.95)
     ul
       display: flex
       flex-direction: row
