--- a/Challenge7/challenge7/src/Card/Card.sass
+++ b/Challenge7/challenge7/src/Card/Card.sass
@@ -4,6 +4,7 @@ $tiny-mobile-height: 70px
 
 .Card
   background: var(--card-bg)
+  opacity: 0.9
   margin-top: 10px
   border-radius: 20px
   height: $desktop-height
@@ -39,7 +40,8 @@ $tiny-mobile-height: 70px
     height: auto
     margin-top: 0
     border-radius: 0
-    border-bottom: 1px solid black
+    margin-bottom: 5px
+    //border-bottom: 10px solid transparent
     .left
       img
         width: $mobile-height
