--- a/Challenge7/challenge7/src/Components/Header/Header.sass
+++ b/Challenge7/challenge7/src/Components/Header/Header.sass
@@ -4,7 +4,7 @@
   align-items: center
   justify-content: space-between
   padding: 20px
-  background: var(--header-bg)
+  background: rgba(var(--header-bg), 0.95)
   color: var(--font)
   z-index: 2000
   @media(max-width: 600px)
