--- a/Challenge7/challenge7/src/Search/Search.sass
+++ b/Challenge7/challenge7/src/Search/Search.sass
@@ -1,6 +1,6 @@
 .search
   width: fit-content
-  border-radius: 0 0 20px 20px
+  border-radius: 100% !important
   background: var(--header-bg)
   width: 100%
   display: flex
