--- a/Challenge7/challenge7/src/Search/Search.sass
+++ b/Challenge7/challenge7/src/Search/Search.sass
@@ -1,7 +1,6 @@
 .search
   width: fit-content
-  border-radius: 100% !important
-  background: var(--header-bg)
+  background: transparent
   width: 100%
   display: flex
   flex-direction: row
