--- a/Challenge7/challenge7/src/Utils/ButtonCustom/ButtonCustom.sass
+++ b/Challenge7/challenge7/src/Utils/ButtonCustom/ButtonCustom.sass
@@ -1,5 +1,7 @@
-.Logout
+.ButtonCustom
   border: 1px solid var(--header-accent2)
+  background: var(--app-bg)
+  color: var(--font)
   border-radius: 20px
   padding: 10px
   height: 50px
@@ -11,3 +13,9 @@
     background: var(--header-accent)
     cursor: pointer
     border: 1px solid var(--app-bg)
+    transform: scale(1.1)
+
+.SignInButton
+  padding: 40px
+  letter-spacing: 2px
+  opacity: 0.8
