pagination styles fix

--- a/Challenge7/challenge7/src/index.css
+++ b/Challenge7/challenge7/src/index.css
@@ -30,7 +30,7 @@ html[data-theme='dark'] {
     --previous: #003566;
     --next: #003566;
     --page: #184eba;
-    --active: #001d3d;
+    --active: #00326a;
     --page-hover: #5273b4;
 }
 /*THEME*/
